--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-fastapi>=0.104.1
-uvicorn>=0.24.0
+fastapi>=0.95.0
+uvicorn>=0.21.1
+yt-dlp>=2023.3.4
+pydantic>=1.10.7
+aioredis>=2.0.1
+fastapi-limiter>=0.1.5
 python-multipart>=0.0.6
-yt-dlp>=2023.11.16
-python-dotenv>=1.0.0
-requests>=2.31.0
-pydantic>=2.5.2 
+python-jose>=3.3.0
+cryptography>=40.0.1
